--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.url=jdbc:postgresql://my_database:5432/company
 spring.datasource.username=random
 spring.datasource.password=code
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.threads.virtual.enabled=true
 
 
 #Redis connection
-server.redis=redis://redis-server:6379
+server.redis=redis://redis-master:6379
