--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,13 @@ name: demo
 # Cuando se agregan los host en el archivo de krakenD se utilizan los puertos del contenedor en este caso 8080, si ponen los que se exponen al host se genera un error
 # revisar como funciona la exposición de puertos y la network bridge
 services:
+  nginx:
+    image: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on: [ apigateway, apigateway2 ]
   apigateway:
     image: devopsfaith/krakend
     environment:
@@ -13,30 +20,21 @@ services:
       - "8090:8090"
     volumes:
       - ./krakend.json:/etc/krakend/krakend.json
-    container_name: krakend
+    container_name: krakend1
+  apigateway2:
+    image: devopsfaith/krakend
+    environment:
+      KRAKEND_LB_ALGORITHM: roundrobin
+    ports:
+      - "8091:8090"
+    volumes:
+      - ./krakend.json:/etc/krakend/krakend.json
+    container_name: krakend2
   backend1:
     build: .
     ports:
       - "8081:8080"
     container_name: backend1.be
-    depends_on: [ postgres, apigateway, redis-master ]
-  backend2:
-    build: .
-    ports:
-      - "8082:8080"
-    container_name: backend2.be
-    depends_on: [ postgres, apigateway, redis-master ]
-  backend3:
-    build: .
-    ports:
-      - "8083:8080"
-    container_name: backend3.be
-    depends_on: [ postgres, apigateway, redis-master ]
-  backend4:
-    build: .
-    ports:
-      - "8084:8080"
-    container_name: backend4.be
     depends_on: [ postgres, apigateway, redis-master ]
   postgres:
     build: ./src/main/resources/persistence
